프로바이더 공부 및  fastify  패키지 제거

--- a/docs/1.개요/2.프로바이더.MD
+++ b/docs/1.개요/2.프로바이더.MD
@@ -90,5 +90,130 @@ export class CatsController {
 ```
 
 - `CatsService`는 클래스 생성자를 통해 <b>주입</b>된다.
-- `private` 문법을 사용한 것을 확인ㅇ하자.
+- `private` 문법을 사용한 것을 확인하자.
 - 이 축약형은 `catsService` 멤버를 선언과 초기화를 동시에 가능하게 한다.
+
+## 의존성 주입
+
+- Nest는 <b>의존성 주입이</b>라는 잘 알려진 강력한 디자인 패턴으로 설계되었다.
+- 우리는 앵귤러 공식 문서에 있는 의존성 주입 개념에 대한 엄청난 글을 읽기를 추천한다.
+- https://docs.nestjs.com/providers#:~:text=in%20the%20official-,Angular,-documentation.
+
+- Nest에서, 타입스크립트 능력 덕분에, 의존성을 관리하는 것은 엄청나게 쉽다. 왜냐하면 의존성들은 단순히 타입으로 주입되기 때문이다.
+- 아래의 예시를 보자, Nest는 `catsService`를 생성하고 `CatsService` 타입의 객체를 반환 하거나, (일반적으로 싱글톤), 이미 어떤 요청에서 생성된 객체를 반환함으로써 주입한다.
+- 의존성은 처리되고 컨트롤러의 생성자에 전달된다 (또는 지시된 속성에 할당된다).
+
+```Typescript
+constructor(private catsService: CatsService) {}
+```
+
+## 스코프
+
+- 프로바이더는 일반적으로 애플리케이션 생명주기와 같은 생명주기를 갖는다 (스코프)
+- 애플리케이션이 부트스트랩될 때, 모든 의존성이 주입되고, 그러므로 모든 프로바이더가 인스턴스화 된다.
+- 유사하게, 애플리케이션이 중지될 때, 모든 프로바이더는 파괴된다.
+- 그러나, 프로바이더 생명주기를 요청과 같게 만들 수 있다.
+- 자세한 방법은 아래의 글을 참조하자.
+- https://docs.nestjs.com/fundamentals/injection-scopes
+
+## 사용자 프로바이더
+
+- Nest는 빌트인 IoC 컨테이너를 갖고 프로바이더들의 의존관계를 해결한다.
+- 의존성 주입은 위에서 설명했지만, 설명한것 보다 더 강력한 기능들이 사실 존재한다.
+- 다음의 프로바이더를 여러 방법으로 정의하는 것을 살펴보자.
+- 단순 한 값, 클래스, 비동기 동기 팩토리를 프로바이더로 사용할 수 있다.
+- 더 많은 예제들은 아래를 참고하자.
+- https://docs.nestjs.com/fundamentals/dependency-injection
+
+## 선택적 프로바이더
+
+- 경우에따라, 꼭 처리되지 않아도 되는 의존성이 존재할 수 있다.
+- 예를 들어, 우리의 클래스가 설정 객체에 의존하고, 만약 설정이 전달되지 않을 경우, 기본 값이 사용 될 때 이다.
+- 이러한 경우에, 의존은 선택적이 될 수 있고, 부족한 설정 프로바이더 때문에 에러를 겪고 싶지 않다.
+
+- 프로바이더가 선택적임을 지시하기 위해, `@Optional()` 데코레이터를 생성자 시그니처에 사용하자.
+
+```Typescript
+import { Injectable, Optional, Inject } from '@nestjs/common';
+
+@Injectable()
+export class HttpService<T> {
+  constructor(@Optional() @Inject('HTTP_OPTIONS') private httpClient: T) {}
+}
+```
+
+- 위의 예제는 사용자 프로바이더를 사용하고, `HTTP_OPTIONS`라는 사용자 토큰을 포함한다.
+- 이전의 생성자 주입에서 의존성을 클래스의 생성자로 지시한 것을 볼 수 있다.
+- 사용자 프로바이더와 연관된 토큰의 자세한 내용은 다음을 참고하자.
+- https://docs.nestjs.com/fundamentals/custom-providers
+
+## 속성 기반 주입
+
+- 우리는 생성자 메소드로부터 프로바이더를 주입바는, 생성자 주입이라고 불리는 기법을 사용해 왔다.
+- 어떠한 특수한 상황에서는 속성 기반의 주입이 효과적일 수 있다.
+- 예를 들어, 제일 상위 클래스가 하나 또는 여러개의 프로바이더를 주입받을 때, `super()`를 통해서 하위 클래스에 전달하는 방법은 매우 지루하다.
+- 이 방법을 피하기 위해서는 `@Inject()` 데코레이터를 속성 위에 사용하자.
+
+```Typescript
+import { Injectable, Inject } from '@nestjs/common';
+
+@Injectable()
+export class HttpService<T> {
+  @Inject('HTTP_OPTIONS')
+  private readonly httpClient: T;
+}
+```
+
+```
+주의
+클래스가 다른 프로바이더를 상속받지 않는다면, 생성자 주입을 쓰는 것을 고려하자.
+```
+
+## 프로바이더 등록
+
+- 이제 우리는 프로비이더를 정의했다 (`CatsService`), 그리고 우리는 서비스를 사용해야 하고 (`CatsController`), 우리는 서비스들 Nest에 등록하여 의존성 주입이 수행되게 해야한다.
+- 이렇게 하기 위해 모듈 파일을 수정하자 (`app.module.ts`) 서비스를 `@Module` 데코레이터의 배열 `providers`에 추가하자.
+
+```Typescript
+app.module.ts
+
+import { Module } from '@nestjs/common';
+import { CatsController } from './cats/cats.controller';
+import { CatsService } from './cats/cats.service';
+
+@Module({
+  controllers: [CatsController],
+  providers: [CatsService],
+})
+export class AppModule {}
+```
+
+- Nest는 이제 `CatsController` 클래스에서 의존성을 주입할 수 있다.
+
+- 이제 우리의 폴더 구조는 아래와 같을 것이다.
+
+```
+src
+ |
+ |-- cats
+ |     |-- dto
+ |     |    |-- create-cat.dto.ts
+ |     |-- interfaces
+ |     |    |-- cat.interface.ts
+ |     |-- cats.controller.ts
+ |     |-- cats.service.ts
+ |-- app.module.ts
+ |-- main.ts
+```
+
+## 수동 인스턴스화
+
+- 지금까지, 우리는 Nest가 의존성 주입을 어떻게 자동으로 처리하는지 자세한 사항을 살펴봤다.
+- 특정 환경에서, 우리는 빌트-인 의존성 주입시스템 밖에서 수동으로 프로바이더를 인스턴스화 하고 반환 받을 필요가 있다.
+- 우리는 간략하게 아래의 두 개의 주제로 살펴본다.
+
+- 인스턴스를 얻기 위해서, 프로바이더를 다이나믹하게 인스턴스화하고, 모듈 참조를 살펴보자.
+- https://docs.nestjs.com/fundamentals/module-ref
+
+- `bootstrap()` 함수에서 프로바이더를 얻고자 할 때는 (예를들어 컨트롤러가 없는 단독 애플리케이션, 또는 부트스트랩에서 사용할 속성 서비스를 활용할 때), 독립 애플리케이션을 살펴보자.
+- https://docs.nestjs.com/standalone-applications
