- ✅ Nest에서 제공하는 기능 (Test 클래스) 을 활용한 테스트 작성
- Nest 의존성 주입 기능 사용
- jest spy 사용

--- a/docs/2.기초/11.테스팅.MD
+++ b/docs/2.기초/11.테스팅.MD
@@ -1,6 +1,6 @@
 # 테스팅
 
-- https://docs.nestjs.com/fundamentals/testing
+- <https://docs.nestjs.com/fundamentals/testing>
 
 - 자동화된 테스트는 중요한 소프트웨어 개발의 노력에서 필수적인 부분으로 고려된다.
 - 자동화는 개별 테스트를 반복적으로 테스트하기 쉽게하며 또는 개발중에 테스트 모음을 빠르게하고 쉽게한다.
@@ -27,7 +27,7 @@
 - 시작하기 위해, 먼저 필요한 패키지를 설치하자:
 
 ```Typescript
-$ npm i --save-dev @nesatjs/testing
+npm i --save-dev @nesatjs/testing
 ```
 
 ## 유닛 테스트
@@ -61,12 +61,9 @@ describe('CatsController', () => {
 })
 ```
 
-```
-힌트
-
-테스트 파일을 테스트하려는 클래스 근처에 두자.
+> 힌트
+>> 테스트 파일을 테스트하려는 클래스 근처에 두자.
 테스팅 파일은 `.spec` 또는 `.test`의 접미사를 가져아 한다.
-```
 
 - 위의 예제는 진부하기 떄문에, 우리는 Nest 테스트 특정 기능을 하나도 사용하지 않았다.
 - 실제로 우리는 의존성 주입마저 사용하지 않았다. (우리는 `CatsService` 인스턴스를 `CatsController`에 전달하였음을 확인하자.)
@@ -107,3 +104,39 @@ describe('CatsController', () => {
     })
 })
 ```
+
+- `Test` 클래스는 애플리케이션 실행 컨택스트를 제공하는데에 유용하여 특히 전체 Nest 런타임 목이 필요할 때 필수적이다, 하지만 목킹과 오버라이딩을 포함한, 클래스 인스턴스를 쉽게 관리할 수 있는 훅을 제공한다.
+- `Test` 클래스는 `createTesting()` 메소드를 포함하여 매개변수로 모듈 메타데이터 객체를 만든다 (`@Module()` 데코레이터에 전달한 객체와 동일한 객체이다.)
+- 위 메소드는 모듈을 의존성을 포함하여 초기화 하고 (애플리케이션이 `main.ts` 파일에서 `NestFactory.create()` 메소드를 사용하여 부트스트랩되는 과정과 같다.), 모듈을 테스트 준비된 상태로 반환한다.
+
+> 힌트
+>> `compile()` 메소드는 비동기 이므로 기다려야 한다.   
+>> 모듈이 컴파일 되면 그것을 정의한 정적 인스턴스를 `get()` 메소드를 통해 얻을 수 있다.
+
+- `TestingModule`은 모듈 참조 클래스로 부터 상속한다, 그러므로 동적으로 스코프 프로바이더를 처리할 수 있다 (transient 또는 request-scoped).
+- 아래와 같이 `resolve()`를 사용해보자. (`get()` 메소드는 오직 정적 인스턴스를 반환한다.)
+
+```Typescript
+const moduleRef = await Test.createTestingModule({
+    controllers: [CatsController],
+    providers: [CatsService],
+}).compile();
+
+catsService = await moduleRef.resolve(CatsService);
+```
+
+> 주의
+>> `resolve()` 메소드는 그것의 의존성 관리 컨테이너 하위 트리로부터 프로바이더의 유일한 인스턴스를 반환한다.   
+>> 각각의 서브트리는 유일한 컨텍스트 식별자를 갖고 있다.   
+>> 그러므로, 메소드를 한번 이상 호출하고 인스턴스 참조를 비교하면, 그것은 같지 않다는 것을 알게 될것이다.
+
+> 힌트
+>> 모듈 참조 기능에 대해 더 알고 싶다면 <https://docs.nestjs.com/fundamentals/module-ref>를 참조하자.
+
+- 운영 버전의 어떤 프로바이더를 사용하는 대신에 테스팅 목적을 위한 `커스텀 프로바이더를` 오버라이드하여 사용할 수 있다.
+- 예를 들어, 데이터 베이스 서비스를 목하여 실제 데이터베이스에 연결하는 것을 대신할 수 있다.
+- 우리는 다음 장에서 오버라이드 하는 법을 배울 것이다, 하지만 유닛 테스트에도 사용할 수 있다.
+
+## 자동 모킹
+
+- 
