--- a/docs/2.기초/11.테스팅.MD
+++ b/docs/2.기초/11.테스팅.MD
@@ -110,7 +110,7 @@ describe('CatsController', () => {
 - 위 메소드는 모듈을 의존성을 포함하여 초기화 하고 (애플리케이션이 `main.ts` 파일에서 `NestFactory.create()` 메소드를 사용하여 부트스트랩되는 과정과 같다.), 모듈을 테스트 준비된 상태로 반환한다.
 
 > 힌트
->> `compile()` 메소드는 비동기 이므로 기다려야 한다.   
+>> `compile()` 메소드는 비동기 이므로 기다려야 한다.
 >> 모듈이 컴파일 되면 그것을 정의한 정적 인스턴스를 `get()` 메소드를 통해 얻을 수 있다.
 
 - `TestingModule`은 모듈 참조 클래스로 부터 상속한다, 그러므로 동적으로 스코프 프로바이더를 처리할 수 있다 (transient 또는 request-scoped).
@@ -126,8 +126,8 @@ catsService = await moduleRef.resolve(CatsService);
 ```
 
 > 주의
->> `resolve()` 메소드는 그것의 의존성 관리 컨테이너 하위 트리로부터 프로바이더의 유일한 인스턴스를 반환한다.   
->> 각각의 서브트리는 유일한 컨텍스트 식별자를 갖고 있다.   
+>> `resolve()` 메소드는 그것의 의존성 관리 컨테이너 하위 트리로부터 프로바이더의 유일한 인스턴스를 반환한다.
+>> 각각의 서브트리는 유일한 컨텍스트 식별자를 갖고 있다.
 >> 그러므로, 메소드를 한번 이상 호출하고 인스턴스 참조를 비교하면, 그것은 같지 않다는 것을 알게 될것이다.
 
 > 힌트
@@ -139,4 +139,48 @@ catsService = await moduleRef.resolve(CatsService);
 
 ## 자동 모킹
 
-- 
+- Nest는 또한 목 팩토리를 정의하여 모든 잃어버린 의존성을 적용할 수 있게 한다.
+- 이 것은 많은 수의 의존성을 가진 클래스를 가졌을 때 그리고 모든 것을 모킹할 때 많은 설정과 시간이 걸리게 하는것에 유용하다.
+- 이 기능을 사용하기 위해서, `createTestingModule()`을 `useMocker()`메소드를 사용하여 체인하여, 의존성 목들을 위해 팩토리를 전달해야 한다.
+- 이 팩토리는, 인스턴스 토큰인, 선택적 토큰을 취하여, Nest 프로바이더의 유효한 토큰이면, 목 구현을 반환한다.
+- 아래의 예제는 대중적인 모커인 `jest-mock`을 사용하였고 `CatsService`를 목하기 위하여 `jest.fn()` 메소드를 사용하였다.
+
+```Typescript
+// ...
+import { ModuleMocker, MockFunctionMetadata } from 'jest-mock';
+
+const moduleMocker = new ModuleMocker(global);
+
+describe('CatsController', () => {
+    let controller: CatsController;
+
+    beforEach(async () => {
+        const moduleRef = await Test.createTestingModule({
+            controllers: [CatsController[,]]
+        })
+        .useMocker((token) => {
+            if (token === CatsService) {
+                return { findAll: jest.fn().mockResolvedValue(results) };
+            }
+
+            if (typeof token === 'function') {
+                const mockMetadata = moduleMocker.getMetadata(token) as MockFunctionMetadata<any, any>;
+                const Mock = moduleMocker.generateFromMetadata(mockMetadata);
+                return new Mock();
+            }
+        })
+        .compile();
+
+        controller = moduleRef.get(CatsController);
+    });
+});
+```
+
+> 힌트
+>> 대중적인 목 팩토리, `@golevelup/ts-jest`의 `createMock` 또한 직접적으로 전달할 수 있다.
+
+- 우리는 또한 테스팅 컨테이너로부터 커스텀 프로바이더의 목을 반환 받을 수도 있다, `moduleRef.get(CatsService).
+
+## End-to-end testing
+
+- 다음 시간에
