--- a/docs/3.기법/1.데이터베이스.md
+++ b/docs/3.기법/1.데이터베이스.md
@@ -21,3 +21,37 @@
 - 이 챕터에서, 우리는 많이 사용하는 `MySQL` 관계형 DBMS로 설명할 것이다, 하지만 Sequelize는 많은 관계형 데이터베이스를 지원한다, PostgreSQL, MySQL, Microsoft SQL Server, SQLite 그리고 MariaDB.
 - 이 챕터에서 할 절차들은 Sequelize가 지원하는 어떠한 데이터베이스를 사용해도 같을 것이다.
 - 간단하게 선택한 데이터베이스의 클라이언트 API 라이브러리와 같이 의존성을 설치하자.
+
+- 설치가 완료되면, 우리는 `SequelizeModule`을 루트 모듈인 `AppModule`에 임포트 할 수 있다.
+
+```Typescript
+app.module.ts
+
+import { Module } from '@nestjs/common';
+import { SequelizeModule } from '@nestjs/sequelize';
+
+@Module({
+  imports: [
+    SequelizeModule.forRoot({
+      dialect: 'mysql',
+      host: 'localhost',
+      port: 3306,
+      username: 'root',
+      password: 'root',
+      database: 'test',
+      models: [],
+    }),
+  ],
+})
+export class AppModule {}
+```
+
+- `forRoot()` 메소드는 Sequelize 생성자를 통해서 노출된 모든 속성을 지원한다.
+- <https://sequelize.org/v5/manual/getting-started.html#setting-up-a-connection>
+- 게다가, 아래에 서술된 특별한 몇 가지 속성을 추가적으로 제공한다.
+
+  - `retryAttempts`: 데이터베이스에 연결 시도 수 (기본 : `10`)
+  - `retryDelay`: 연결 재시도 사이의 간격 (ms) (기본: `3000`)
+  - `autoLoadModels`: `true` 이면, 모델들이 자동으로 로드 됨 (기본: `false`)
+  - `keepConnectionAlive`:: `true` 이면, 애플리케이션이 종료될 때 커넥션이 종료되지 않음 (기본: `false`)
+  - `synchronize`: `true` 이면, 자동으로 로드된 모델이 동기화 된다 (기본: `true`)
