docs: (@nestjs/sequelize)

--- a/docs/3.기법/1.데이터베이스.md
+++ b/docs/3.기법/1.데이터베이스.md
@@ -55,3 +55,492 @@ export class AppModule {}
   - `autoLoadModels`: `true` 이면, 모델들이 자동으로 로드 됨 (기본: `false`)
   - `keepConnectionAlive`:: `true` 이면, 애플리케이션이 종료될 때 커넥션이 종료되지 않음 (기본: `false`)
   - `synchronize`: `true` 이면, 자동으로 로드된 모델이 동기화 된다 (기본: `true`)
+
+- 연결이 완료되면, `Sequelize` 객체를 전체 프로젝트에서 주입할 수 있다 (다른 모듈의 임포트 없이), 예를 들어:
+
+```Typescript
+app.service.ts
+
+import { Injectable } from '@nestjs/common';
+import { Sequelize } from 'sequelize-typescript';
+
+@Injectable()
+export class AppService {
+  constructor(private sequelize: Sequelize) {}
+}
+```
+
+## 모델들
+
+- Seqeulieze는 Active Record 패턴을 구현한다.
+- 이 패턴에서는 모델 클래스를 이용하여 데이터베이스와 직접적으로 상호작용할 수 있다.
+- 예제를 계속하기 위해서, 우리는 최소 하나의 모델이 필요하다.
+- `User` 모델을 정의해보자.
+
+```Typescript
+user.model.ts
+
+import { Column, Model, Table } from 'sequelize-typescript';
+
+@Table
+export class User extends Model {
+  @Column
+  firstName: string;
+
+  @Column
+  lastName: string;
+
+  @Column({ defaultValue: true })
+  isActive: boolean;
+}
+```
+
+> 힌트
+>> 사용가능한 데코레이터를 더 확인하려면, <https://github.com/RobinBuschmann/sequelize-typescript#column>
+
+- `User` 모델 파일은 `users` 폴더에 위치한다.
+- 이 폴더는 `UsersModule`과 관련된 파일을 포함하고 있다.
+- 우리는 모델 파일이 어디에 위치에 결정해야한다, 하지만, 우리는 모듈 폴더에 대응하는 <strong>도메인</strong> 근처에 위치하는 것을 추천한다.
+
+- `User` 모델의 사용을 시작하기 위해, 우리는 Sequelize에게 우리의 모델을 알려줄 필요가 있고, 모듈의 `forRoot()` 메소드 옵션에 `models` 배열에 넣어주면 된다.
+
+```Typescript
+app.module.ts
+
+import { Module } from '@nestjs/common';
+import { SequelizeModule } from '@nestjs/sequelize';
+import { User } from './users/user.model';
+
+@Module({
+  imports: [
+    SequelizeModule.forRoot({
+      dialect: 'mysql',
+      host: 'localhost',
+      port: 3306,
+      username: 'root',
+      password: 'root',
+      database: 'test',
+      models: [User],
+    }),
+  ],
+})
+export class AppModule {}
+```
+
+- 다음으로 `UserModule`을 살펴보자:
+
+```Typescript
+users.module.ts
+
+import { Module } from '@nestjs/common';
+import { SequelizeModule } from '@nestjs/sequelize';
+import { User } from './user.model';
+import { UsersController } from './users.controller';
+import { UsersService } from './users.service';
+
+@Module({
+  imports: [SequelizeModule.forFeature([User])],
+  providers: [UsersService],
+  controllers: [UsersController],
+})
+export class UsersModule {}
+```
+
+- 이 모듈은 `forFeature()` 메소드를 사용하여 현재 스코프에 등록되어야할 모델을 정의한다.
+- 이 곳에서 우리는 `UserModel`을 `UserService`에 `@InjectModel()` 데코레이터를 사용하여 주입할 수 있다.
+
+```Typescript
+users.service.ts
+
+import { Injectable } from '@nestjs/common';
+import { InjectModel } from '@nestjs/sequelize';
+import { User } from './user.model';
+
+@Injectable()
+export class UsersService {
+  constructor(
+    @InjectModel(User)
+    private userModel: typeof User,
+  ) {}
+
+  async findAll(): Promise<User[]> {
+    return this.userModel.findAll();
+  }
+
+  findOne(id: string): Promise<User> {
+    return this.userModel.findOne({
+      where: {
+        id,
+      },
+    });
+  }
+
+  async remove(id: string): Promise<void> {
+    const user = await this.findOne(id);
+    await user.destroy();
+  }
+}
+```
+
+> 주의
+>> `AppModule`에 `UsersModule`을 불러오는 것을 잊지 말자.
+
+- `Sequelize.forFeature`로 불러온 모듈 밖에서 레포지터리를 사용하기를 원한다면, 우리는 다시-내보내기로 생성된 프로바이더를 내보내야 한다.
+- 다음과 같이, 전체 모듈을 내보내기 함으로 할 수 있다:
+
+```Typescript
+users.module.ts
+
+import { Module } from '@nestjs/common';
+import { SequelizeModule } from '@nestjs/sequelize';
+import { User } from './user.entity';
+
+@Module({
+  imports: [SequelizeModule.forFeature([User])],
+  exports: [SequelizeModule]
+})
+export class UsersModule {}
+```
+
+- 이제 `UserHttpModule`에서 `UsersModule`을 불러오고, 후자의 모듈의 프로바이더에서 `@InjectModel(User)`를 사용할 수 있다.
+
+```Typescript
+users-http.module.ts
+
+import { Module } from '@nestjs/common';
+import { UsersModule } from './users.module';
+import { UsersService } from './users.service';
+import { UsersController } from './users.controller';
+
+@Module({
+  imports: [UsersModule],
+  providers: [UsersService],
+  controllers: [UsersController]
+})
+export class UserHttpModule {}
+```
+
+## 관계들
+
+- 관계란 두개 혹은 이상의 테이블간의 관계를 설정하는 것이다.
+
+- 관계는 각각의 테이블의 공통된 필드에 기초로 한다, 종종 기본키 혹은 외래키와 관련된다.
+
+- 아래에 3가지 타입의 관계가 있다:
+  - `1 대 1`: 부모 테아블의 각 행은 하나 이고 자식 테이블의 하나의 행에 연관된다.
+  - `1 대 다 / 다 대 1`: 부모 테이블의 각 행이 자식 테이블의 여러 행과 연관된다.
+  - `다 대 다`: 각 부모 테이블의 모든 행이 자식 테이블의 여러 행과 연관되고, 각각의 자식 테이블의 행이 부모 테이블의 여러 행과 연관된다.
+
+- 엔티티간의 관계를 정의하기 위하여, 다음의 데코레이터를 사용하자.
+- 예를 들어, `User`가 여러개의 사진을 가진다를 정의하기 위하여, `@HasMany()` 데코레이터를 사용한다.
+
+```Typescript
+user.entity.ts
+
+import { Column, Model, Table, HasMany } from 'sequelize-typescript';
+import { Photo } from '../photos/photo.model';
+
+@Table
+export class User extends Model {
+  @Column
+  firstName: string;
+
+  @Column
+  lastName: string;
+
+  @Column({ defaultValue: true })
+  isActive: boolean;
+
+  @HasMany(() => Photo)
+  photos: Photo[];
+}
+```
+
+> 힌트
+>> Sequelize의 관계에 대해서 더 보려면, <https://github.com/RobinBuschmann/sequelize-typescript#model-association>
+
+## 모델 자동-로드
+
+- 커넥션 옵션에 수동으로 모델을 `models` 배열에 추가하는 것은 지루하다.
+- 게다가, 루트 모듈에서 모델을 참조하는 것은 애플리케이션의 도메인 경계를 깨뜨리고 애플리케이션의 다른 부분에 구현의 노출이 발생할 수 있다.
+- 이 문제를 해결하기 위해, 설정 객체에 `autoLoadModels`와 `synchronize` 두 옵션을 `true`로 설정하여 자동으로 모델을 로드하게 하자 (`forRoot()` 메소드에 전달하라), 아래와 같이 말이다
+
+```Typescript
+import { Module } from '@nestjs/common';
+import { SequelizeModule } from '@nestjs/sequelize';
+
+@Module({
+  imports: [
+    SequelizeModule.forRoot({
+      ...
+      autoLoadModels: true,
+      synchronize: true,
+    }),
+  ],
+})
+export class AppModule {}
+```
+
+- 옵션이 구체화 되면, `forFeature()`를 통하여 모든 모델이 등록되며 자동으로  설정 객체의 `model` 배열에 추가된다.
+
+> 주의
+>> `forFeature()` 메소드를 통해 등록하지 않은 모델들은, 단지 다른 모델로부터 참조된 모델은 (관계를 통해), 등록되지 않을 수 있다.
+
+## 트랜잭션
+
+- 데이터베이스 트랜잭션은 데이터베이스 관리 시스템이 데이터베이스에서 수행하는 일의 단위이며, 다른 트랜잭션으로 부터 독립적이라는 것을 일관적이고 신뢰할 수 있다라는 것을 상징한다.
+- 트랜잭션은 일반적으로 데이터베이스의 어떠한 변화를 나타낸다.
+
+- Sequelize 트랜잭션을 다룰 수 있는 서로 다른 방법들이 많이 있다.
+- 아래의 샘플은 트랜잭션 관리를 구현하는 것이다. (자동-콜백)
+
+- 먼저, 우리는 일반적인 방법으로 `Sequelize` 객체를 클래스에 주입받아야 한다.
+
+```Typescript
+@Injectable()
+export class UsersService {
+  constructor(private sequelize: Sequelize) {}
+}
+```
+
+> 힌트
+>> `Sequelize` 클래스는 `sequelize-typescript` 패키지에서 상속받는다.
+
+- 이제, 우리는 이 객체로 트랜잭션을 생성할 수 있다.
+
+```Typescript
+async createMany() {
+  try {
+    await tihs.sequelize.transaction(async t => {
+      const transactionHost = { transaction: t};
+
+      await this.userModel.create(
+        { firstName: 'Abraham', lastName: 'Lincoln' },
+        transactionHost,
+      );
+
+      await this.userModel.create(
+        { firstName: 'John', lastName: 'Boothe' },
+        transactionHost,
+      );
+    });
+  } catch (err) {
+     // Transaction has been rolled back
+     // err is whatever rejected the promise chain returned to the transaction callback
+  }
+}
+```
+
+> 힌트
+>> `Sequelize` 객체는 오직 트랜잭션을 시작하기 위해서 사용된다.  
+>> 그러나, 클래스를 테스트하기 위해서 전체 `Sequelize` 객체 (몇 가지 메소드를 노출한)를 모킹이 필수 적이다.
+>> 그러므로, 우리는 헬퍼 팩토리 클래스를 사용하기를 추천한다 (예를 들어, `TransactionRunner`) 그리고 트랜잭션을 관리할 수 있는 몇 가지 메소드들만 제한적으로 있는 인터페이스를 정의하자.
+>> 이 기법은 모킹을 만들며 메소드들을 꽤나 똑바로 만들어준다.
+
+## 마이그레이션
+
+- 마이그레이션은 데이터베이스의 존재하는 데이터를 보존하며, 점진적인 데이터베이스 스키마 업데이트를 제공하여 애플리케이션의 데이터모델과 동기화한다.
+- 생성하고, 실행하고, 마이그레이션을 되돌리기 위해선 Sequelize가 제공하는 CLI를 사용하자.
+- <https://sequelize.org/v5/manual/migrations.html#the-cli>
+
+- 마이그레이션 클래스는 Nest 애플리케이션 소스코드와 분리된다.
+- 마이그레이션 생명주기는 Sequelize CLI에 의해 관리된다.
+- 그러므로, 의존성 주입같은 Nest 특정 기능을 마이그레이션에서 사용할 수 없다.
+- 마이그레이션에 대해서 더 찾아보려면 Sequelize 문서를 확인하자.
+- <https://sequelize.org/v5/manual/migrations.html#the-cli>
+
+## 여러 데이터베이스
+
+- 어떤 프로젝트에서는 여러 데이터베이스 연결이 필수적 일 수 있다.
+- 이 것도 모듈에서 가능하다.
+- 여러 연결을 하려면, 먼저 커넥션을 만들자.
+- 이 경우에 커넥션 네이밍은 필수적이다.
+
+- 우리의 데이터베이스에 `Album` 엔티티를 저장해야한다고 가정하자.
+
+```Typescript
+const defaultOptions = {
+  dialect: 'postgres',
+  port: 5432,
+  username: 'user',
+  password: 'password',
+  database: 'db',
+  synchronize: true,
+};
+
+@Module({
+  imports: [
+    SequelizeModule.forRoot({
+      ...defaultOptions,
+      host: 'user_db_host',
+      models: [User],
+    }),
+    SequelizeModule.forRoot({
+      ...defaultOptions,
+      name: 'albumsConnection',
+      host: 'album_db_host',
+      models: [Album],
+    }),
+  ]
+})
+export class AppModule {}
+```
+
+> 확인
+>> 커넥션 이름을 설정하지 않는다면, 이름은 `default`로 정해진다.
+>> 여러 커넥션을 이름없이 사용한다면, 또는 같은 이름으로, 커넥션들은 오버라이드 된다.
+
+- 이 경우에, 우리는 `User`와 `Album` 모델을 커넥션에 등록했다.
+- 이 설정과 `SequelizeModule.forFeature()` 메소드에게 전달해야하고, `@InjectModel()` 데코레이터로 커넥션은 사용된다.
+- 커넥션 이름을 전달하지 않는다면, `default` 커넥션이 사용된다.
+
+```Typescript
+@Module({
+  imports: [
+    SequelizeModule.forFeature([User]),
+    SequelizeModule.forFeature([Album], 'albumsConnection')
+  ],
+})
+export class AppModule {}
+```
+
+- 우리는 또한 각 커넥션에 `Sequelize` 인스턴스를 주입할 수 있다.
+
+```Typescript
+@Injectable()
+export class AlbumsService {
+  constructor(
+    @InjectConnection('albumsconnection')
+    private sequelize: Sequelize,
+  ) {}
+}
+```
+
+- 또한 `Sequelize` 인스턴스를 프로바이더에 주입하는 것도 가능하다.
+
+```Typescript
+@Module({
+  providers: [
+    {
+      provide: AlbumsService,
+      useFactory: (albumsSequelize: Sequelize) => {
+        return new AlbumsService(albumsSequelize);
+      }
+      inject: [getConnectionToken('albumsConnection')],
+    },
+  ],
+})
+export class AlbumsModule {}
+```
+
+## 테스팅
+
+- 애플리케이션의 유닛 테스트를 할 때, 우리는 보통 데이터베이스 연결을 피하기를 원하고, 우리의 테스트 결과가 독립적이며, 가능한 빨리 동작하기를 원한다.
+- 하지만 우리의 클래스는 커넥션 객체로 부터온 모델에 종속적이다.
+
+- 어떻게 다뤄야 할까?
+
+- 방법은 목 모델을 만드는 것이다.
+- 이 것을 달성하기 위하여, 우리는 커스텀 프로바이더를 만든다.
+- 각 등록된 모델은 자동으로 `<ModelName>Model` 토큰으로 나타나며, `ModelName`은 모델 클래스의 이름이다.
+
+- `@nestjs/sequelize` 패키지는 `getModelToken()` 함수를 가지며, 주어진 모델의 준비된 토큰을 반환한다.
+
+```Typescript
+@Module({
+  providers: [
+    UsersService,
+    {
+      provide: getModelToken(User),
+      useValue: mockModel,
+    },
+  ],
+})
+export class UsersModule {}
+```
+
+- 이제 대체제 `mockModel`은 `UserModel`로 사용된다.
+- 어떠한 클래스가 `UserModel`을 `@InjectModel()` 데코레이터를 사용해 요청할 때 마다, Nest는 등록된 `mockModel` 객체를 사용할 것 이다.
+
+## 비동기 설정
+
+- 우리는 아마 `SequelizeModule` 옵션을 정적으로 하지않고, 비동기적으로 전달하고 싶을 수 있다.
+- 이 경우에 `forRootAsync()` 메소드를 사용하여, 여러 방법으로 비동기 설정을 다룰 수 있다.
+
+- 한 방법은 팩토리 함수를 사용하는 것이다.
+
+```Typescript
+SequelizeModule.forRootAsync({
+  useFactory: () => ({
+    dialect: 'mysql',
+    host: 'localhost',
+    port: 3306,
+    username: 'root',
+    password: 'root',
+    database: 'test',
+    models: [],
+  }),
+});
+```
+
+- 우리의 팩토리는 다른 비동기 프로바이더와 유사하다 (예를들어, `async`가 될 수 있고, `inject`를 통해 의존성 주입이 가능한 것)
+
+```Typescript
+SequelizeModule.forRootAsync({
+  imports: [ConfigModule],
+  useFactory: (configService: ConfigService) => ({
+    dialect: 'mysql',
+    host: configService.get('HOST'),
+    port: +configService.get('PORT'),
+    username: configService.get('USERNAME'),
+    password: configService.get('PASSWORD'),
+    database: configService.get('DATABASE'),
+    models: [],
+  }),
+  inject: [ConfigService],
+});
+```
+
+- 대안으로, 우리는 `useClass` 문법을 사용할 수 있다,
+
+```Typescript
+SequelizeModule.forRootAsync({
+  useClass: SequelizeConfigService,
+})
+```
+
+- 위에서 생성은 `Sequelizemodule`의 `SequelizeConfigService`를 인스턴스화하고 `createSequelizeOptions()`를 호출함으로 그 것을 옵션 객체로 사용한다.
+- 그 말은 `SequelizeConfigService`가 `SequelizeOptionsFactory` 인터페이스를 구현하고 있음을 의미한다, 아래를 보자.
+
+```Typescript
+@Injectable()
+class SequelizeConfigService implements SequelizeOptionsFactory {
+  createSequelizeOptions(): SequelizeModuleOptions {
+    return {
+      dialect: 'mysql',
+      host: 'localhost',
+      port: 3306,
+      username: 'root',
+      password: 'root',
+      database: 'test',
+      models: [],
+    };
+  }
+}
+```
+
+- `SequelizeModule`의 `SequelizeConfigService` 생성을 막기 위해서는 다른 모듈에서 가져온 프로바이더를 사용하고, `useExisting` 문법을 사용하자.
+
+```Typescript
+SequelizeModule.forRootAsync({
+  imports: [ConfigModule],
+  useExisting: ConfigService
+});
+```
+
+- 생성은 `useClass`와 같게 동작하지만 하나의 큰 차이점이 있다 - `Sequelize` 모듈은 가져온 모듈을 찾고 새롭게 생성하는 대신 `ConfigService`의 것을 사용한다.
+
+## 예제
+
+- 동작하는 예제는 아래를 참조하자.
+- <https://github.com/nestjs/nest/tree/master/sample/07-sequelize>
