feat(auth): email/password authentication

--- a/docs/4.보안/1.인증.md
+++ b/docs/4.보안/1.인증.md
@@ -124,3 +124,175 @@ import { UsersService } from './users.service';
 })
 export class UsersModule {}
 ```
+
+- 우리의 `AuthService`는 사용자들 반환하고 패스워드를 확인하는 역할이 있다.
+- 우리는 위의 목적에 따라 `validateUser() 메소드를 만들자.
+- 아래의 코드를 보면, 우리는 편리한 ES6 펼침(spread) 연산자를 사용하여 패스워드 속성을 반환하기 전에 사용자 객체에서 빼내었다.
+- 우리는 잠시 후 패스포트 로컬 전략으로 부터 `validateUser()` 메소드를 호출할 것이다.
+
+```ts
+import { Injectable } from '@nestjs/common';
+import { UserService } from '../users/users.service';
+
+@Injectable()
+export class AuthService {
+    constructor(private usersService: UsersServoce) {}
+
+    async validateUser(username:string, pass: string): Promise<any> {
+        const user = await this.usersService.findOne(username);
+        if (user && user.password == pass) {
+            const { password, ...result} = user;
+            return result;
+        }
+        return null;
+    }
+}
+```
+
+> 경고
+>> 물론 실제 애플리케이션에서, 우리는 비밀번호를 일반 텍스트로 저장하진 않을 것이다.
+>> 우리는 대신 bcrypt 같은 라이브러리를 사용할 것이다, 그리고 함께 솔트된 단방향 해쉬 알고리즘을 사용할 것이다.
+>> 이러한 접근과, 우리는 단지 해쉬된 비밀번호를 저장하고, 저장된 비밀번호와 매개변수로 들어온 비밀번호의 해쉬된 값과 비교한다, 그러므로 절대로 사용자 비밀번호를 일반 텍스트로 저장하거나 노출되지 않는다.
+>> 우리의 간단한 애플리케이션 예제를 계속하기 위해선, 우리는 절대적으로 위임하는것을 위반할 것이고(?) 일반 텍스트를 사용할 것이다.
+>> 절대로 실제 애플리케이션에서 사용하지 말라!
+
+- 이제, 우리는 `AuthModule`에서 `UserModule`을 가져올 것이다.
+
+```ts
+import { Module } from '@nestjs/common';
+import { AuthService} from './auth.service';
+import { UsersModule } from '../users/users.module';
+
+@Module({
+    imports: [UsersModule],
+    providers: [AuthService], 
+})
+export class AuthModule {}
+```
+
+## 패스포트 로컬 구현
+
+- 우리는 이제 우리의 패스포트 로컬 인증 전략을 구현할 것이다.
+- 이름이 `local.strategy.ts` 파일을 `auth` 폴더에 만들고, 아래의 코드를 추가한다.
+
+- 우리는 서술된 레시피를 따라왔다 이전에 모두 패스포트의 전략을 위해
+- 우리의 경우에 패스포트-로컬과 함께, 어떠한 설정값이 필요하진 않다, 그래서 우리의 생성자에 단순하게 `super()`를 호출했다, 다른 옵션 객체 없이
+
+> 힌트
+>> 우리는 패스포트 전략의 행동을 커스터마이즈 하기 위해 옵션 객체를 `super()`를 호출할 때 전달할 수 있다.
+>> 이 예에서, 패스포트-로컬 전략은 기본 설정으로 동작하고, `username`과 `password`라 불리는 속성이 요청 바디 있다는 것을 예상할 수 있다.
+>> 다른 속성 이름을 구체화 하기 위해서 옵션 객체를 전달하라, 예를 들어 `super({ usernameField: 'email' })`.
+>> 자세한 내용을 보려면 패스포트 문서를 보아라.
+>> <http://www.passportjs.org/docs/configure/>
+
+- 우리는 또한 `validate()` 메소드를 구현했다.
+- 각각 전략에서, 패스포트는 확인(verify) 함수를 호출하고 (구현된 `@nestjjs/passport`의 `validate()` 메소드) 매개변수의 집합에 적절한 특정-전략을 사용한다.
+- 로컬-전략에선, 패스포트는 `validate()` 메소드에 다음의 형태를 따른다고 예측할수 있다 `validate(username: string, password: string): any`.
+
+- 많은 인증 작업들이 우리의 `AuthService` 안에서 끝났고 (`UserService`의 도움 덕분에), 그래서 이 메소드는 꽤 직관적이다.
+- 패스포트 전략의 `validate()` 메소드는 비슷한 형태를 따르며, 다양하지만 단지 비밀정보가 어떻게 표현되는지 상세에 대해서만 다르다.
+- 만약 사용자가 발견되고 비밀정보가 올바르다면, 사용자는 반환되고 패스포트는 작업을 수행할 수 있다 (예를 들어, `user` 속성을 `Request` 객체에 만든다), 그리고 요청 핸들링 파이프라인은 지속될 수 있다.
+- 만약 사용자를 찾지 못하면, 우리는 예외를 던지고 우리의 예외 계층이 처리한다.
+
+- 일반적으로, 각 전략의 `validate()` 메소드의 유의미한 차이는 어떻게 사용자가 존재하고 바른지 결정하는 것이다.
+- 예를 들어, JWT 전략에서는, 요구사항에 따르지만, 우리는 아마도 평가한다 해혹된 토큰에서 가져온 `userId`가 우리의 데이터베이스에 있는지, 또는 토큰이 파기된 목록에 있는지.
+- 그러므로, 자식 클래스의 형식과 특정 전략의 인증을 구현하는 것은 일관되고, 우아하며 확장 가능하다.
+
+- 우리는 이제 우리의 `AuthModule`을 설정해야한다, 우리가 정의한 패스포트의 기능을 사용하기 위해서.
+- `auth.module.ts`를 다음과 같이 수정하자:
+
+```ts
+import { Module } from '@nestjs/common';
+import { AuthService } from './auth.service';
+import { UsersModule } from '../users/users.module';
+import { PassportModule } from '@nestjs/passport';
+import { LocalStrategy } from './local.strategy';
+
+@Module({
+  imports: [UsersModule, PassportModule],
+  providers: [AuthService, LocalStrategy],
+})
+export class AuthModule {}
+```
+
+## 내장 패스포트 가드
+
+- 가드 장(<https://docs.nestjs.com/guards>) 에서는 주요 가드의 기능에 대해서 얘기한다: 요청이 라우트 핸들러에 의해 처리되든 아니든.
+- 그것이 참이라고 여겨지면, 우리는 일반적인 가능성을 사용할 것이다.
+- 그러나, 컨텍스트에서 `@nestjs/passport` 모듈을 사용중이라면, 우리는 또한 약간의 주름살을 찌푸릴 수 있는 처음엔 혼동스러운 것을 소개해야한다, 지금부터 얘기하겠다!
+- 우리의 애플리케이션이 인증 측면에서, 두 가지 상태가 존재할 수 있다고 생각해보자:
+    1. 사용자/클라이언트가 로그인 하지 않음 (비인증)
+    2. 사용자/클라이언트가 로그인 됨 (인증)
+
+- 첫 번째 경우에 (사용자가 로그인 하지 않음), 우리는 두 가지 다른 함수를 실행할 필요가 있다:
+  - 비인증된 사용자의 차단된 라우트로 접근 (예를들어, 제한된 라우트로 접근 거부).
+    - 우리는 가드를 사용할 것이다, 안전한 라우트에 가드를 위치함으로써, 이 기능을 처리하기 위해서 그 것들의 친숙한 사용량에 따라(?)
+    - 예상한대로, 우리는 가드에서 유효한 JWT 토큰의 존재를 확인하며, 그 다음 가드에서 작업이 끝나면, 우리는 성공적으로 JWT들을 발행한다.
+  - 인증 단계를 시작에 있어서 이전에 인증되지 않은 사용자가 로그인을 시도한다고 할 때.
+    - 우리는 이 단계에서 유효한 사용자에게 JWT 토큰을 발급할 것이다.
+    - 잠깐만 생각해보자, 우리는 `POST`로 username/password 비밀 정보가 필요하다 인증하기 위해선, 그리고 우리는 `POST /auth/login` 라우트에서 처리할 것을 구성한다.
+    - 그럼 의문이 들 것이다: 어떻게 정확히 패스포트-로컬 전략이 라우트에 호출되는지?
+
+- 정답은 직관적이다: 다른 것을 사용함으로, 약간 다른 종류의 가드.
+- `@nestjs/passport` 모듈은 우리에게 이러한 작업을 하도록 내장된 가드를 제공한다.
+- 이 가드는 패스포트 전략을 호출하고 위에 설명한 작업을 시작할 것이다 (비밀 정보 바놘, 확인 함수 실행, `user` 속성 생성, 등등)
+
+- 위에서 열거한 두 번째 경우는 (인증된 사용자) 간단하게 일반적인 종류의 가드에 의존한다, 우리가 얘기했던 이미 접근 가능하게하며, 인증된 사용자의 안전한 라우트를 위한 것이다.
+
+## 로그인 라우트
+
+- 이 곳에 전략을 둠으로써, 우리는 이제 기본적인(bare-bone) `/auth/login` 라우트를 구현하였고, 내장된 가드를 패스포트-로컬 흐름을 시작할 수 있도록 적용하였다.
+
+- `app.controller.ts` 파일을 열어, 아래와 같이 내용을 교체하자:
+
+```ts
+import { Controller, Request, Post, UseGuards } from '@nestjs/common';
+import { AuthGuard } from '@nestjs/passport';
+
+@Controller()
+export class AppController {
+    @UseGuards(AuthGuard('local'))
+    @Post('auth/login')
+    async login(@Request() req) {
+        return req.user;
+    }
+}
+```
+
+- `@UseGuards(AuthGuard('local'))`와 `AuthGuard`, 패스포트-로컬 전략을 상속할 때 `@nestjs/passport`에서 우릴 위해 자동으로 제공한것을 사용했다.
+- 이제 분해해보자.
+- 우리의 패스포트 로컬 전략은 기본 이름인 `local` 이다.
+- 우리는 `@UseGuards()` 데코레이터 안에서 이름으로 참조한다, `passport-local` 패키지에서 제공된 코드와 연관 짓기 위해서이다.
+- 이 것은 애매모호하지 않다, 전략을 수행하기 위해서 우리는 다양한 패스포트 전략을 애플리케이션에서 가질 수 있다 (각각은 특정-전략에 의해서 `AuthGuard`에 공급될 수 있다).
+- 우리는 오직 하나의 전략을 사용하므로, 나아가 우리는 간단하게 두 번째를 추가할 것이지만, 애매모호하지 않다.
+
+- 우리의 라우트를 테스트하기 위해 우리는 `/auth/login` 라우트를 간단히 만들어 사용자를 반환하게 했다.
+- 이 것은 또한 우리에게 패스포트의 다른 특징하나를 설명한다: 패스포트는 자동으로 `user` 객체를 만든다, 우리가 `validate()` 메소드에서 반환한 값을 가지고, 그리고 `Request` 객체에 할당한다 `req.user` 처럼.
+- 이후에, 우리는 이 코드를 JWT를 만들고 반환하는 것으로 대체할 것이다.
+
+- 우리의 API 라우트에서, 우리는 흔히 사용되는 `cURL` 라이브러리로 테스트할 수 있다.
+- 우리는 `UserService`에 하드-코드된 어떤 `user` 객체로 테스트할 수 있다.
+
+```sh
+# POST to /auth/login
+curl -X POST http://localhost:3000/auth/login -d '{"username": "john", "password": "changeme"}' -H "Content-Type: application/json"
+# result -> {"userId"1, "username": "john"}
+```
+
+- 이 작업을 할 때, 전략의 이름을 직접적으로 `AuthGuard()`에 전달하는 것은 코드 전반에 매직-스트링을 넣는다.
+- 대신, 우리는 아래와 같이 클래스를 만드는 것을 추천한다:
+
+```ts
+@Injectable()
+export class LocalAuthGuard extends AuthGuard('local') {}
+```
+
+- 우리는 이제 `/auth/login` 라우트 핸들러를 수정하고 `LocalAuthGuard`를 사용하도록 대체할 수 있다:
+
+```ts
+@UseGuards(LocalAuthGuard)
+@Post('auth/login')
+async login(@Request() req) {
+    return req.user;
+}
+```
