test(auth): e2e test in progress docs(testing): complete!

--- a/docs/2.기초/11.테스팅.MD
+++ b/docs/2.기초/11.테스팅.MD
@@ -183,4 +183,186 @@ describe('CatsController', () => {
 
 ## End-to-end testing
 
-- 다음 시간에
+- 개별 모듈과 클래스에 관심을 둔, 유닛 테스트와는 다르게, end-to-end (e2e) 테스팅은 클래스와 모듈의 보다 전체적인 수준의 상호 작용을 테스트한다 -- 최종 사용자와 운영 시스템의 상호작용에 더 가깝다.
+- 애플리케이션이 커짐에 따라, 수동으로 각각의 API 엔드포인트의 최종 사용자의 행동을 테스트하기란 점점 어려워진다.
+- 자동화된 e2e 테스트는 전체적인 시스템이 올바르고 프로젝트의 요구사항을 충족하는지 증명하는데 도움을 준다.
+- e2e 테스트를 수행하기 위해 우리는 유닛 테스트에 사용했던 것과 비슷한 설정을 사용할 것이다.
+- 게다가, Nest는 테스트 하기 쉽게 `Supertest` 라이브러리를 사용하여 HTTP 요청을 시뮬레이션한다.
+
+```ts
+import * as request from 'supertest';
+import { Test } from '@nestjs/testing';
+import { CatsModule } from '../../src/cats/cats.module';
+import { CatsService } from '../../src/cats/cats.service';
+import { INestApplication } from '@nestjs/common';]
+
+describe('Cats', () => {
+    let app: INestApplication;
+    let catsService = { findAll: () => ['test'] };
+
+    beforeAll(async () => {
+        const moduleRef = await Test.createTestingModule({
+            imports: [CatsModule],
+        })
+            .overrideProvider(CatsService)
+            .useValue(catsService)
+            .compile();
+        
+        app = moduleRef.createNestApplication();
+        await app.init();
+    });
+
+    it ('GET cats', () => {
+        return request(app.getHttpServer())
+            .get('/cats')
+            .expect(200)
+            .expect({
+                data: catsService.findAll(),
+            })
+    });
+
+    afterAll(async () => {
+        await app.close();
+    });
+});
+```
+
+> 힌트
+>> 만약 HTTP 어댑터로 `Fastify`를 사용중이라면, 내장된 테스팅을 가능하게 하기 위해, 조금 다른 설정이 필요하다.
+>>
+>>```ts
+>>let app: NestFastifyApplication;
+>>
+>>beforeAll(async() => {
+>>    app.moduleRef.createNestApplication<NestFastifyApplication>(
+>>        new FastifyAdapter(),
+>>    );
+>>
+>>    await app.init();
+>>    await app.getHttpAdapter().getInstance().ready();
+>>});
+>>
+>>it('/GET cats', () => {
+>>    return app
+>>        .inject({
+>>            method: 'GET',
+>>            url: '/cats',
+>>        })
+>>        .then((result) => {
+>>            expect(result.statusCode).toEqual(200);
+>>            expect(result.payload).toEqual(/* expectedPayload */);
+>>        });
+>>});
+>>
+>>afterAll(async () => {
+>>    await app.close();
+>>});
+>>```
+
+- 이 예제에서, 우리가 앞서서 설명했던 개념을 구축해 보았다.
+- 게다가 `compile()` 메소드는 이전에 우리가 사용해 본것이다, 우리는 이제 `createNestApplication()` 메소드를 사용하여 완전한 Nest 런타임 환경을 인스턴스화 했다.
+- 우리는 우리의 동작하는 애플리케이션의 참조를 `app` 변수에 저장하여, 우리가 사용하여 HTTP 요청을 시뮬레이션 가능하다.
+
+- 우리는 HTTP 테스트를 슈퍼테스트에서 오는 `request()` 함수를 사용하여 시뮬레이션 한다.
+- 우리는 이러한 HTTP 요청을 우리의 동작하는 Nest 애플리케이션에게 라우트하길 원한다, 그래서 우리는 `request()`  함수에 Nest 아래에 있는 (차례로, 아마도 Express 플랫폼에서 제공된) HTTP 리스너 참조를 전달하였다.
+- 게다가 `request(app.getHttpServce())`를 생성하였다.
+- `request()` 호출은 우리의 HTTP 서버를 감싸고, 이제 노출된 메소드를 실제 HTTP 요청으로 시뮬레이션한, Nest 애플리케이션에 연결된다.
+- 예를 들어, `request(...).get('/cats')`를 사용하면 Nest 애플리케이션에 요청을 시작하여, 실제 HTTP 요청과 동일하게 `get '/cats'` 요청이 네트워크로 부터 온다.
+
+- 이 예제에서, 우리는 또 (테스트-더블(?)) `CatsService` 구현의 대체제를 제공하여 간단하게 하드-코드된 값을 반환하여 테스트에 사용할 수 있도록 하였다.
+- `overrideProvider()`를 사용하여 구현을 대신해보라.
+- 간단하게, Nest는 가드, 인터셉터, 필터, 파이프를 오버라이드 할 수 있는 `overrideGuard()`, `overrideInterceptor()`, `overrideFilter()`, `overridePipe()` 메소드를 관점에 맞게 제공한다.
+
+- 각 오버라이드 메소드는  `custom providers`를 설명할 수 있는 거울인, 세 가지 다른 메소드를 가진 객체를 반환한다:
+  - `useClass`: 인스턴스화될 클래스를 제공하여 객체를 오버라이드 한다 (프로바이더, 가드 등등)
+  - `useValue`: 오버라이드할 객체의 인스턴스를 제공한다
+  - `useFactory`: 오버라이드할 객체의 인스턴스를 반환하는 함수를 제공한다.
+
+- 각 오버라이드 메소드 타입은, 차례 대로, `TestingModule` 인스턴스를 반환한다, 그러므로 유연한 방식으로 다른 메소드들과 체이닝 할 수 있다.
+- 우리는 `compile()` 메소드를 꼭 각 체인의 끝에 사용하여 Nest가 인스턴스화되고 모듈을 초기화할 수 있도록하자.
+
+- 또한, 가끔, 예를 들어 테스트 수행시 커스텀 로거를 사용하기를 원할 수 있다. (예를 들어, CI 서버에서).
+- `setLogger()` 메소드를 사용하자 그리고 `LoggerService` 인터페이스를 충족하는 객체를 전달하여 `TestModuleBuilder`에게 어떻게 테스트동안에 로그를 남길지 지시하자 (기본적으로, 오직 "에러" 로그만 콘솔에 남을 것이다).
+
+- 컴파일된 모듈은 몇 가지 유용한 메소드를 가지고 있으며, 아래의 테이블과 같다:
+
+|메소드명|설명|
+|--------|----|
+|`createNestApplication()`|주어진 모듈에 부터 Nest 애플리케이션을 만들고 반환한다. (`INestApplication` 인스턴스)   주의하라 우리는 꼭 수동으로 `init()` 메소드를 사용하여 애플리케이션을 초기화해야한다.|
+|`createNestNMicroService()`|주어진 모듈로 부터Nest 마이크로서비스를 만들고 반환한다 (`INestMicroService` 인스턴스)|
+|`get()`|애플리케이션 컨텍스트의 컨트롤러나 프로바이더 (가드, 필터 등을 포함한)의 정적 인스턴스를 반환한다.    `module reference` 클래스로부터 상속된다.|
+|`resolve()`|애플리케이션 컨텍스트의 컨트롤러나 프로아비어에서 사용가능한 동적으로 생성된 스코프 인스턴스 (요청 또는 일시적인) 를 반환한다.    `module reference` 클래스로 부터 상속된다. |
+|`select()`|모듈의 의존성 그래프를 탐색한다; 선택한 모듈의 특정 인스턴스를 반환하는 용도로 사용할 수 있다 (`get()` 메소드의 강제 모드와 사용할 수 있다 (`strict:true`)) |
+
+> 힌트
+>> e2e 테스트 파일을 `test` 폴더에 두어라. 테스팅 파일은 `e2e-spec`의 접미사를 가져야 한다.
+
+## 전역적으로 등록된 인헨서 오버라이딩
+
+- 만약 전역적으로 등록된 가드를 갖고 있다면 (또는 파이프, 인터셉터, 필터), 이 인헨서들을 오버라이드 하기 위한 몇 가지 단계를 더 수행해야 한다.
+- 등록했던 것을 다시 상기시켜 보자:
+
+```ts
+providers: [
+    {
+        provide: APP_GUARD,
+        useClass: JwtAuthGuard,
+    },
+].
+```
+
+- 이 등록된 가드는 `APP_*` 토큰을 통한 "여러"-프로바이더이다.
+- 이 `JwtAuthGuard`를 대체하기 위해, 이 슬롯에 존재하는 프로바이더를 사용하여 등록할 필요가 있다.
+
+```ts
+providers: [
+  {
+    provide: APP_GUARD,
+    useExisting: JwtAuthGuard,
+    // ^^^^^^^^ notice the use of 'useExisting' instead of 'useClass'
+  },
+  JwtAuthGuard,
+],
+```
+
+> 힌트
+>> `useClass`를 `useExisting`으로 교체하여 Nest가 인스턴스가 토큰뒤로 초기화한 값 대신 등록된 프로바이더를 참조한다.
+
+- 우리는 이제 `JwtAuthGuard`가 Nest의 일반적인 프로바이더로 보여, `TestingModule`을 생성할 때 오버라이드 할 수 있다.
+
+```ts
+const moduleRef = await Test.createTestingModule({
+  imports: [AppModule],
+})
+  .overrideProvider(JwtAuthGuard)
+  .useClass(MockAuthGuard)
+  .compile();
+```
+
+## 테스팅 요청-스코프 인스턴스
+
+- 요청-스코프 프로바이더는 각 요청에 따라 유일하게 생성된다.
+- 인스턴스는 요청의 처리가 끝나면 가비지-컬렉트된다.
+- 이 자세(pose)는 문제이다, 우리는 특별히 테스트 요청의 의존성 주입 하위-트리로 생성된것에 접근할 수 없다.
+
+- 우리는 (위의 절에 기초하여) `resolve()` 메소드가 동적으로 인스턴스화된 클래스를 반환하는 것을 알고 있다.
+- 또한, 여기에 설명된 대로 (<https://docs.nestjs.com/fundamentals/module-ref#resolving-scoped-providers>), 우리는 유일한 컨텍스트 식별자를 전달하여 DI 컨테이너의 하위-트리 생명주기를 제어할 수 있다는 것을 알고 있다.
+- 어떻게 테스트 컨텍스트에 이용해볼까?
+
+- 전략은 모든 요청에서 하위 트리를 만들 때 Nest가 이 특별한 ID를 사용하는 것을 강제하도록 컨텍스트 식별자를 생성하는 것이다.
+- 이 방법으로 우리는 테스트 요청을 위한 반환하는 인스턴스를 생성할 수 있다.
+
+- 이 것을 달성하기 위해서, 우리는 `ContextIdFactory`에 `jest.spyOn()`을 사용하자.
+
+```ts
+const contextId = ContextIdFacotry.create();
+jest
+    .spyOn(ContextIdFactory, `getByRequest`)
+    .mockImplementation(() => contextId);
+```
+
+- 우리는 이제 `contextId`를 사용하여 어떠한 일련의 요청에도 하나로 생성된 DI 컨테이너의 하위 트리를 접근할 수 있다.
+
+```ts
+catsService = await moduleRef.resolve(CatsService, contextId);
+```
